--- a/themes/default/orderDetail.html
+++ b/themes/default/orderDetail.html
@@ -10,9 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>订单详情</title>
     <link rel="stylesheet" href="<?php echo base_url('themes/default/css/public.css');?>">
-    <link rel="stylesheet" href="<?php echo base_url('themes/default/css/common.css');?>">
-    <link rel="stylesheet" href="<?php echo base_url('themes/default/lib/weui.css');?>">
-    <link rel="stylesheet" href="<?php echo base_url('themes/default/lib/jquery-weui.min.css');?>">
+    <!--<link rel="stylesheet" href="<?php echo base_url('themes/default/css/common.css');?>">-->
+    <link rel="stylesheet" href="<?php echo base_url('themes/default/lib/weui.min0803.css');?>">
     <script src="<?php echo base_url('themes/default/js/zepto.min.js');?>" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
     <script>
@@ -27,52 +26,162 @@
     </script>
 </head>
 <body>
-    <div class="header">
-        <span>在线支付</span>
-        <a></a>
+    <div class="weui_tab">
+        <div style="background-color: #4c4c4c;text-align: center;color: #fff;display: block;position: relative;font-size: 16px;line-height: 48px;">
+            <a href="javascript:history.go(-1);" style="position: absolute;left: 15px;"><img src="icon/left.png" style="width: 24px;height: 24px;margin-top: 12px;"></a>订单详情
+        </div>
+
+        <div class="weui_tab_bd" style="padding-bottom: 100px;padding-top: 0;">
+            <div class="weui_panel weui_panel_access" style="margin-top: 1.17em;">
+                <div class="weui_cells" style="margin-top: 0;">
+                    <div class="weui_cell">
+                        <div class="weui_cell_bd weui_cell_primary">
+                            <p>订单编号：884545454545</p>
+                        </div>
+
+                        <div class="weui_cell_ft"><a href="" class="weui_btn weui_btn_mini weui_btn_primary" style="line-height: 2.6;background-color:#e60012;">去付款</a></div>
+
+                        <!--<div class="weui_cell_ft" style="color: #e91021;">{$order->statusname}</div>-->
+
+
+                    </div>
+                </div>
+
+                <!--{if !empty($order->expressno)}
+                <div class="weui_panel_bd">
+                    <div class="weui_media_box weui_media_small_appmsg">
+                        <div class="weui_cells weui_cells_access">
+                            <a class="weui_cell" href="/order/express_info?orderid={$order->id}&expressno={$order->expressno}">
+                                <div class="weui_cell_hd"><img src="/images/wechat/order_process.png" alt="" style="width:20px;margin-right:5px;display:block"></div>
+                                <div class="weui_cell_bd weui_cell_primary" style="margin-left: 10px;padding: 10px 0;">
+                                    {if $order->status eq '008005' || $order->status eq '008006' || $order->status eq '008007'}
+                                    <p style="color: #44b549;font-size: 16px;">您的快递已签收，期待下次继续为您服务</p>
+                                    {elseif $order->status eq '008004'}
+                                    <p style="color: #e60012;font-size: 16px;">您的快递正在配送中…… [物流跟踪]</p>
+                                    {/if}
+
+                                    {*<p style="font-size: 14px;">2016-06-08 12:20:56</p>*}
+                                </div>
+                                <span class="weui_cell_ft"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                {/if}-->
+
+                <div class="weui_panel_bd">
+                    <a href="javascript:;" class="weui_media_box weui_media_appmsg weui_cell">
+                        <div class="weui_media_hd" style="width: 20px;">
+                            <img class="weui_media_appmsg_thumb" src="img/adress.png" alt="">
+                        </div>
+                        <div class="weui_media_bd" style="margin-left: 15px;">
+                            <h4 class="weui_media_title">收货人：哈哈</h4>
+                            <p class="orderinfo">联系电话：6666666666</p>
+                            <p class="orderinfo">收货地址：阿范德萨范德萨发斯蒂芬</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="weui_panel weui_panel_access" style="margin-top: 1.17em;">
+                <div class="weui_panel_bd">
+                    <a href="/goods/{$goods->goodsid}" class="weui_media_box weui_media_appmsg" style="cursor: default;">
+                        <div class="weui_media_hd">
+                            <img class="weui_media_appmsg_thumb" src="img/1.jpg" alt="" width="78" style=" border: #eee solid 1px;border-radius: 3px;">
+                        </div>
+                        <div class="weui_media_bd" style="flex: 2;">
+                            <p class="weui_media_desc" style="color: #333;line-height: 20px;">加油卡</p>
+                        </div>
+                        <div class="weui_media_bd">
+                            <div class="fs20 fr">￥188</div><br>
+                            <div class="fs20 fr" style="text-decoration: line-through;color: #999;">￥188</div><br>
+                            <div class="fs20 fr" style="color: #999;">X 5</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="weui_cells" style="margin-top: 0;">
+                    <div class="weui_cell">
+                        <div class="weui_cell_bd weui_cell_primary">
+
+                        </div>
+                        <div class="weui_cell_ft">
+                            <div style="color: #666;">共8件商品 合计：<span style="display:inline-block;width: 77px;color:#f28f00; ">￥6666</span></div>
+                            <!--{if $order->couponamount gt 0}-->
+                            <!--<div style="color: #999;">优惠券抵扣：<span style="display:inline-block;width: 77px;">￥{$order->couponamount}</span></div>-->
+                            <!--{/if}-->
+                            <!--{if $order->payableamount-$order->couponamount neq $order->discountamount}-->
+                            <!--<div style="color: #999;">折扣金额：<span style="display:inline-block;width: 77px;">￥{$order->discountamount}</span></div>-->
+                            <!--{/if}-->
+                            <div style="color: #999;">实付运费：<span style="display:inline-block;width: 77px;">￥8888</span></div>
+                            <!--{if $order->payableamount neq $order->totalamount}-->
+                            <!--<div style="color: #999;">应付总额：<span style="display:inline-block;width: 77px;">￥{$order->totalamount}</span></div>-->
+                            <!--{/if}-->
+                            <!--{if $order->pointsamount gt 0}-->
+                            <!--<div style="color: #999;">积分抵扣：<span style="display:inline-block;width: 77px;">￥{$order->pointsamount}</span></div>-->
+                            <!--{/if}-->
+                            <!--{if $order->commissionamount gt 0}-->
+                            <!--<div style="color: #999;">佣金抵扣：<span style="display:inline-block;width: 77px;">￥{$order->commissionamount}</span></div>-->
+                            <!--{/if}-->
+                            <div style="color: #999;">实付金额：<span style="display:inline-block;width: 77px;color: #e60012;">￥9999</span></div>
+                        </div>
+                    </div>
+                    <!--{if $order->status eq '008005'}-->
+                    <!--<div class="weui_cell">-->
+                        <!--<a href="/order/after_sales_list/{$order->id}" class="apply_after_sales weui_btn weui_btn_primary" style="width: 100%;background:url(/images/wechat/shouhou.png) no-repeat 32% #fff;color: #e60012;font-size: 14px;">退换货申请</a>-->
+                    <!--</div>-->
+                    <!--{/if}-->
+                </div>
+            </div>
+
+            <div class="weui_panel weui_panel_access">
+                <div class="weui_panel_bd">
+                    <div class="weui_media_box weui_media_text">
+                        <h4 class="weui_media_title">配送信息</h4>
+                        <p class="orderinfo">配送方式：普通快递</p>
+                        <p class="orderinfo">配送时间：2017-5-9</p>
+                    </div>
+                </div>
+            </div>
+
+            <!--<div class="weui_panel weui_panel_access">-->
+                <!--<div class="weui_panel_bd">-->
+                    <!--<div class="weui_media_box weui_media_text">-->
+                        <!--<h4 class="weui_media_title">发票信息</h4>-->
+                        <!--{if $order->isinvoice eq '0'}-->
+                        <!--<p class="orderinfo">发票内容：不开发票</p>-->
+                        <!--{else}-->
+                        <!--<p class="orderinfo">发票内容：明细</p>-->
+                        <!--<p class="orderinfo">发票抬头：{$order->invoicetitle}</p>-->
+                        <!--{/if}-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+
+            <!--<div class="weui_panel weui_panel_access">-->
+                <!--<div class="weui_panel_bd">-->
+                    <!--<div class="weui_media_box weui_media_text">-->
+                        <!--<h4 class="weui_media_title">订单信息</h4>-->
+                        <!--<p class="orderinfo">订单编号：{$order->orderno}</p>-->
+                        <!--{if $order->expressno neq ''}-->
+                        <!--<p class="orderinfo">配送单号：{$order->expressno}</p>-->
+                        <!--{/if}-->
+                        <!--<p class="orderinfo">下单时间：{$order->cts}</p>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+            <div class="footnav">
+                <ul>
+                    <li><a href="javascript:;"><img src="<?php echo base_url('themes/default/icon/11ac.png');?>" alt=""><p>首页</p></a></li>
+                    <li><a href="<?php echo site_url('order/get_orders/ALL')?>"><img src="<?php echo base_url('themes/default/icon/22ac.png');?>" alt=""><p>订单</p></a></li>
+                    <li><a href="<?php echo site_url('cart/show');?>"><img src="<?php echo base_url('themes/default/icon/33.png');?>" alt=""><p>购物车</p></a></li>
+                    <li><a href="<?php echo site_url('user/profile')?>"><img src="<?php echo base_url('themes/default/icon/44.png');?>" alt=""><p>会员中心</p></a></li>
+                </ul>
+            </div>
     </div>
-    <div class="weui-msg">
-        <div class="weui-icon-area" style="margin-bottom: 20px;"><i class="weui-icon-success weui-icon_msg" style="color: #e60012;"></i></div>
-        <div class="weui-text-area">
-            <h2 class="weui-msg-title">订单提交成功,请尽快支付！</h2>
-            <p class="weui-msg-desc">订单编号：<span style="color: #e60012;font-weight: bold;"><?php echo $order['order_sn'] ;?></span></p>
-            <p class="weui-msg-desc">支付金额：<span style="color: #e60012;font-weight: bold;"><?php echo $order['order_amount'] ;?></span></p>
-        </div>
-        <div class="weui-opr-area">
-            <p class="weui-btn-area">
-                <a href="javascript:;" class="weui-btn weui-btn-primary topay" orderid="<?php echo $order['order_id'] ;?>" orderno="<?php echo $order['order_sn'] ;?>" amount="<?php echo $order['order_amount'] ;?>" style="background-color: #e60012;">微信安全支付</a>
-            </p>
-        </div>
     </div>
     <script>
-        $('.topay').on('click', function(){
-            var orderid = $(this).attr('orderid');
-            var orderno = $(this).attr('orderno');
-            var amount = $(this).attr('amount');
-            $.post("<?php echo site_url('order/to_pay');?>", { orderid:orderid,orderno:orderno,amount:amount }, function(jd){
-                if(jd.success){
-                    wx.chooseWXPay({
-                        appId: jd.data.appId,
-                        timestamp: jd.data.timeStamp,
-                        nonceStr: jd.data.nonceStr,
-                        package: jd.data.package,
-                        signType: jd.data.signType,
-                        paySign: jd.data.paySign,
-                        success: function (res) {
-                            location.href="/order/" + jd.data.orderid;
-                        },
-                        fail: function (res) {
-                            $.toast('支付失败，请重试！');
-                        },
-                        cancel: function(){
-                            $.toast('微信支付已取消！');
-                        }
-                    });
-                }else{
 
-                }
-            }, 'json');
-        });
     </script>
 </body>
 </html>
